--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ published: true
 		
           <h1>World IA Day is coming.</h1>
           <p>When information is clear and considerate of the context in which we need it, there is a certain peaceful joy that washes over us. We feel loved or cared for. We crave the feeling that someone carefully considered our needs and expectations. </p>
-<p>In Brussels we give the stage to small companies and organisation with big impact on this feeling. </p>
+<p>In Brussels we give the stage to companies and organisations with big impact on this feeling. </p>
 
 <p>Discover our <a href="program.html">interesting speakers</a> or</p>
 <p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Register for Free</a></p>
