--- a/program.html
+++ b/program.html
@@ -14,9 +14,9 @@ published: true
 			<h2>10u: Official start</h2>
 			<hr class="divider--dotted">
 			<h2>Keynotes</h2>
-			
 			<p><strong>Responsive design:creating a unique user experience</strong> by Sjoera Roggeman, Human Interface Group</p>
 			<p><strong>"On tortoises and hares"</strong> by Annie Stewart & Pieter Rahier, Internet architects</p>
+			<p><strong>The Web under our Skin</strong> by Bart De Waele, Wijs</p>
 			<p><strong>Case Study: A Interactive Negotiation Tool</strong> by Dimitrie Stefanescu, BVB architects</p>
 			<p><strong>Case study: the EYD 2015 website for the European Commission</strong> by Koen Peters and Maarten Segers, Namahn & Amplexor</p>
 			<hr class="divider--dotted">
