--- a/program.html
+++ b/program.html
@@ -21,7 +21,7 @@ published: true
 			<p><strong>Case study: the EYD 2015 website for the European Commission</strong> by Koen Peters and Maarten Segers, Namahn & Amplexor</p>
 			<hr class="divider--dotted">
 			<h2>Workshops</h2>
-			<p><del><strong>Sketchnotes as a tool to synthesize and engage meaningful communication</strong> by Nadia Ferreira, Nascom</del><br/> We're looking for an alternative workshop TBC</p>
+			<p><s><strong>Sketchnotes as a tool to synthesize and engage meaningful communication</strong> by Nadia Ferreira, Nascom</s><br/> We're looking for an alternative workshop TBC</p>
 			<p><strong>Cities, data and happiness</strong> by Sofie Dieltjens, Tine Peeters, Dries De Roeck, Studiodott</p>
 			
 	<hr class="divider--dotted">
